test/resources/case37_no_name/case37_bad_ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: case37-ingress-class
spec:
  controller: alien.giant/web
