test/resources/case37_no_name/case37_bad_ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: case37-wrong-1-ingress
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: case37-wrong-2-ingress
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 801
