test/resources/case37_no_name/case37_good_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: good-ingress
spec:
  ingressClassName: test
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
