test/resources/case37_no_name/case37_no_name_clusterscope_policy.yaml
apiVersion: policy.open-cluster-management.io/v1
kind: ConfigurationPolicy
metadata:
  name: case37-test-policy-clusterscope
spec:
  remediationAction: inform
  object-templates:
    - complianceType: musthave
      objectDefinition:
        apiVersion: networking.k8s.io/v1
        kind: IngressClass
        spec:
          controller: ingress.k8s.aws/alb
