test/resources/case37_no_name/case37_no_name_policy_nothave.yaml
apiVersion: policy.open-cluster-management.io/v1
kind: ConfigurationPolicy
metadata:
  name: case37-test-policy-mustnothave
spec:
  remediationAction: inform
  object-templates:
    - complianceType: mustnothave
      objectDefinition:
        apiVersion: networking.k8s.io/v1
        kind: Ingress
        metadata:
          namespace: default
        spec:
          ingressClassName: test
